[#23] Fix: 모달 z-index 수정
헤더, 푸터 위로 렌더되도록 수정

--- a/components/common/modal/modal.module.scss
+++ b/components/common/modal/modal.module.scss
@@ -1,6 +1,7 @@
 .outer {
   position: absolute;
   inset: 0;
+  z-index: 100;
   background-color: rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
